# decipad

./: .algolia-config.alpha.json  .algolia-config.json  .browserslistrc  .dependency-cruiser.js  .env.demo  .env.example  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .madgerc  .npmcheckrc  .percy.yml  .prettierignore  .prettierrc  .private-deploy.env.example  .yarnrc  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Tiltfile  algolia-config.json  babel-replace-env.js  babel-web.babelrc.js  babel-web.config.js  babel.config.js  codegen.yml  components.json  esbuild-runner.config.js  flake.nix  graphql-schema.json  jest-base.config.js  jest-base.swc.config.js  jest-dom.config.js  jest-dom.swc.config.js  jest.config.js  jest.preset.js  lighthouserc.js  (+24 more)
apps/compute-backend/: .gitignore  Cargo.toml  project.json
apps/compute-backend/benches/: serialize_result.rs  sum_runtime.rs
apps/compute-backend/compute-backend-derive/: Cargo.toml
apps/compute-backend/compute-backend-derive/src/: lib.rs
apps/compute-backend/src/: comparators.rs  import.rs  lib.rs  tests.rs  types.rs  types_impl.rs
apps/compute-backend/src/deci_result/: coerce.rs  mod.rs
apps/compute-backend/src/import/: code.rs  csv.rs  gsheets.rs  mod.rs  mysql.rs  notion.rs
apps/compute-backend/src/infer/: mod.rs
apps/compute-backend/src/parse/: mod.rs
apps/compute-backend/src/types/: ast.rs  comparators.rs  mod.rs  types.rs  types_get_assertions.rs  types_impl.rs  types_utils_impl.rs  zero.rs
apps/compute-backend/src/value/: contiguous_slice.rs  filtered_column.rs  (+4 more)
apps/compute-backend/tests/: deserialize_results.rs  serialize_results.rs  web.rs
apps/compute-backend/wasm-bench/: serialize_result.rs
(+10495 files in other folders)
